fix md